add images endpoint
